--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.cdnfonts.com/css/general-sans");
+@import "leaflet/dist/leaflet.css";
 
 @tailwind base;
 @tailwind components;
